2010-12-27 Matthias Scholz <ms@jammerhund.de>
	* Added some parts of org.openide.awt package from the NetBeans project
		- now we have a DropDownbutton and a DropDownToogleButton
		- this is a stripped down version of the original NB 6.9.1 source code,
		   so we do not need many additional JAR's
	* WorkbenchToolBar: added a addCursorTool() method for adding CursorTools
		with an own JToggleButton implementation such as the DropDownToogleButton

2010-12-14 mmichaud <michael.michaud@free.fr>
    * Fixed a bug in IntersectPolygonLayersPlugIn. resetFeatureValuesToNaN
      method was resetting integer attribute values to non integer value
      Double.NaN. They are now set to null.

2010-12-12 mmichaud <michael.michaud@free.fr>
    * Fixed bug#3130723 : Layer Statistics and Feature Statistics now recurse 
      through GeometryCollection
    * LayerStatistic now returns exact mean values instead of their floor()
      equivalent for nbPoints, nbComponents and nbHoles

2010-12-11 Matthias Scholz <ms@jammerhund.de>
	* WorkbenchFrame
		* changed contents of the statusPanel to JSplitPane's
		* DividerLocation of the JSplitPane's will be automaticaly saved/restored
			through the PersistentBlackboard
	* update ui.WorkbenchFrame.copy-to-clipboard key in lang files for es, fi, fr, it

2010-12-05 mmichaud <michael.michaud@free.fr>
    * Fixed a bug in TreeLayerNamePanel : now check if the layerable is selected
      a deselected layer moved to another place could be deleted
    * Fixed a bug in JoinTableDataSourceCSV. Now, empty lines are silently
      skipped

2010-12-02 mmichaud <michael.michaud@free.fr>
    * release a 1.4.0.3 version which is just a new windows installer with
      the current build-2178 version

2010-11-30 Matthias Scholz <ms@jammerhund.de>
	* WorkbenchFrame
		* changed the messageLabel to a JTextfield for copy&paste the content
	* added ui.WorkbenchFrame.copy-to-clipboard I18n key for the tooltip

2010-11-23 mmichaud <michael.michaud@free.fr>